migrate blue-validation to blue-validation-core